--- a/style.css
+++ b/style.css
@@ -1,10 +1,44 @@
-h1 {
-    color: red;
+h1,
+h2,
+h3 {
+    color: black;
     font-family: 'Playfair Display', serif;
     font-weight: bold;
 }
 
+h1 {
+    font-size: 96px;
+}
+
 p {
     font-family: 'Poppins', serif;
-        font-weight: normal;
-    }
+    font-weight: normal;
+}
+
+.hero {
+    background: #f9f7fe;
+    text-align: center;
+    padding: 160px 0;
+}
+
+.hero p {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.hero h2 {
+    font-family: 'Poppins', serif;
+    font-weight: normal;
+    line-height: 2;
+    font-size: 24px;
+}
+
+.btn-branding {
+    background: #6c63ff;
+    border-radius: 4px;
+    color: white;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+}
