--- a/style.css
+++ b/style.css
@@ -62,12 +62,42 @@ p {
     padding: 120px 60px;
 }
 
+.about-section {
+    padding: 160px 20px;
+}
+
+.about-section h1 {
+font-size: 64px;
+line-height: 80px;
+}
+
+.about-section h2 {
+    font-size: 18px;
+    font-family: 'Poppins', serif;
+}
+
+.about-content {
+    margin: 30px;
+}
+
 @media (max-width: 900px) {
     h1 {
-        font-size: 60px;
+        font-size: 44px;
+        line-height: 2;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .hero {
+        padding: 80px 20px;
+    }
+    .about-section{
+        text-align: center;
+        padding: 0;
     }
     .project-des {
             padding: 0;
             text-align: center;
         }
 }
+
