--- a/style.css
+++ b/style.css
@@ -80,6 +80,21 @@ line-height: 80px;
     margin: 30px;
 }
 
+.content h3 {
+    font-size: 24px;
+    line-height: 1.5;
+    margin: 20px 0 0;
+    font-family: 'Poppins', serif;
+}
+
+.content p {
+font-size: 14px;
+}
+
+.content h1 {
+text-align: center;
+}
+
 @media (max-width: 900px) {
     h1 {
         font-size: 44px;
