--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h2 {
     font-size: 64px;
 }
 
+h4 {
+    font-size: 48px;
+}
+
 p {
     font-family: 'Poppins', serif;
     font-size: 16px;
@@ -126,6 +130,46 @@ font-size: 14px;
 text-align: center;
 }
 
+footer {
+    margin: 60px 0;
+}
+
+
+footer .contact-box {
+    background: #f9f7fe;
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+
+footer .contact-box p{
+    margin: 0;
+}
+
+footer .email-link {
+text-decoration: none;
+color: black;
+font-size: 24px;
+text-align: center;
+}
+
+footer .email-link:hover {
+    color: #6c63ff;
+}
+
+footer .social-links a{
+margin: 0 20px;
+color: #6c63ff;
+background-color: #f9f7fe;
+padding: 10px 14px;
+border-radius: 50%;
+font-size: 18px;
+transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+    background: white;
+}
+
 @media (max-width: 900px) {
     h1 {
         font-size: 44px;
@@ -134,6 +178,12 @@ text-align: center;
     h2 {
         font-size: 44px;
     }
+
+h4{
+    font-size: 26px;
+}
+
+
     .hero {
         padding: 80px 20px;
     }
